Add amplify analytics

--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -50,5 +50,11 @@
       "providerPlugin": "awscloudformation",
       "type": "manual"
     }
+  },
+  "analytics": {
+    "reactpin": {
+      "service": "Pinpoint",
+      "providerPlugin": "awscloudformation"
+    }
   }
 }
